...
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vah-O1-c3d">
                                <rect key="frame" x="264" y="285" width="72" height="30"/>
                                <state key="normal" title="Show Map"/>
                                <connections>
                                    <segue destination="GwR-pf-8n0" kind="presentation" identifier="presentMap" id="fmE-Me-CcM"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
...
            <point key="canvasLocation" x="1091" y="137"/>
        </scene>
        <!--Select Nearby Location-->
        <scene sceneID="xeJ-Bh-2ut">
            <objects>
                <viewController id="hay-3h-yiE" customClass="MapViewController" customModule="MapViewController" customModuleProvider="target" sceneMemberID="viewController">
                    <navigationItem key="navigationItem" title="Select Nearby Location" id="ZTt-kE-O9k">
                        <barButtonItem key="leftBarButtonItem" title="Back" id="hhi-pn-6Ow">
                            <connections>
                                <action selector="dismiss:" destination="hay-3h-yiE" id="jPa-2w-0ma"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
