...
        self.searchController = UISearchController(searchResultsController: self.resultsViewController)
        self.searchController.delegate = self
        self.searchController.dimsBackgroundDuringPresentation = false
        self.searchController.hidesNavigationBarDuringPresentation = false
        self.searchController.searchResultsUpdater = self
        self.searchController.searchBar.delegate = self
        self.searchController.searchBar.placeholder = "Search for place or address"
        self.searchController.searchBar.sizeToFit()

        self.definesPresentationContext = true
        self.navigationItem.titleView = self.searchController.searchBar
    }

...
        let view = MKPinAnnotationView(annotation: annotation, reuseIdentifier: reuseIdentifier)
        view.canShowCallout = true
        if let title = annotation.title {
            view.accessibilityValue = title
        }
        let selectButton = UIButton(type: .ContactAdd)
        selectButton.accessibilityLabel = "Select address in callout view"
        view.rightCalloutAccessoryView = selectButton

        return view
    }

    func mapView(mapView: MKMapView, annotationView view: MKAnnotationView,
...
