...
        searchController = UISearchController(searchResultsController: resultsViewController)
        searchController.delegate = self
        searchController.dimsBackgroundDuringPresentation = false
        searchController.hidesNavigationBarDuringPresentation = false
        searchController.searchResultsUpdater = self
        searchController.searchBar.delegate = self
        searchController.searchBar.placeholder = "Search for place or address"
        searchController.searchBar.searchBarStyle = .minimal
        searchController.searchBar.sizeToFit()
        searchController.loadViewIfNeeded()

        definesPresentationContext = true
        navigationItem.titleView = searchController.searchBar
...
    static let reuseIdentifier = "MapPinView"

    var defaultColor = MKPinAnnotationView.redPinColor()
    var isPlacemarkSelected = false {
        didSet {
            if isPlacemarkSelected {
                selectButton.accessibilityLabel = "Deselect address in callout view"
                selectButton.setTitle("－", for: .normal)
                pinTintColor = tintColor
            } else {
                selectButton.accessibilityLabel = "Select address in callout view"
                selectButton.setTitle("＋", for: .normal)
                pinTintColor = defaultColor
            }
            selectButton.sizeToFit()
        }
    }
...
